--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        {% include 'header.html' %}
         <div class="row">
             <div class="col-8">
 
