--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -19,15 +19,37 @@
                     </li>
                     <li>
                         <a href="" class="nav-link text-white">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                            <use xlink:href="#speedometer2"></use>
-                        </svg>
-                        Добавить категорию
+                            <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                                <use xlink:href="#speedometer2"></use>
+                            </svg>
+                            Добавить категорию
                         </a>
                     </li>
                 </ul>
 
             </div>
+        </div>
+    </div>
+    <div class="px-3 py-2 bg-light mb-3" style="border-radius: 0 0 10px 10px;">
+        <div class="container d-flex flex-wrap justify-content-center">
+            <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search" method="get"
+                  action="">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search" name='do'
+                       autocomplete="off" id="search">
+            </form>
+            {% if request.user.is_authenticated %}
+            <a href="{% url "profile_detail" request.user.profile.slug %}" type="button" class="btn btn-secondary
+            me-2"> {{ request.user.username }}</a>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button class="btn btn-primary">Выйти</button>
+            </form>
+            {% else %}
+            <div class="text-end">
+                <a href="{% url "login" %}" type="button" class="btn btn-light text-dark me-2">Авторизация</a>
+                <a href="{% url "register" %}" type="button" class="btn btn-primary">Регистрация</a>
+            </div>
+            {% endif %}
         </div>
     </div>
 
