--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -18,11 +18,11 @@
                         </a>
                     </li>
                     <li>
-                        <a href="" class="nav-link text-white">
+                        <a href="{% url "records_create" %}" class="nav-link text-white">
                             <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                 <use xlink:href="#speedometer2"></use>
                             </svg>
-                            Добавить категорию
+                            Добавить запись
                         </a>
                     </li>
                 </ul>
